
In the process of doing work for #8, above, I introduced a class cast
exception into some of the admin console code that resulted in the
server getting stuck during shutdown.  In fixing this, I revised the
shutdown sequence to be more verbose and to ensure that arbitrary
exceptions thrown late in the server shutdown process won't prevent
the server from exiting.

-------------------- Changes from 1.0.8 to 1.0.9 -------------------

RELEASE DATE: December 4, 2001

1. [SERVER] Fixed xml parser error introduced in 1.0.8

The server side XML parsing code in Ganymede 1.0.8 had a major bug.
The 'addIfNotPresent' vector field mode was made the default, but
support for handling the addIfNotPresent mode was not implemented for
invid vector fields.  Loading data into invid vector fields silently
failed.

This has been fixed, and the xml file processing now works properly
for all kinds of vector fields.

In addition, the server's xml code now reports whenever it sees an
<invid> element that it is not able to resolve during the data
consolidation phase.

Apologies to all and thanks to Gaurav Bhargava at Villanova University
for reporting this brown paper bag bug.

-------------------- Changes from 1.0.7 to 1.0.8 -------------------

RELEASE DATE: November 16, 2001

1. [SERVER] Fixed Invid, String, IP array fields disk i/o to handle large arrays

The InvidDBField, StringDBField, and IPDBField classes support array
values for object pointeers, strings, and IP addresses, respectively.

Prior to this release, the length of these arrays were limited to 32k
entries, as a 16 bit signed short was used to store the array length
on disk.

This has now been changed to a 32 bit signed int, so that Ganymede's
disk format can now handle 2 billion items per array.

That doesn't mean that the server will be able to behave well with 2
billion items in a String field, but there at least won't be an
artificial cap of 32k items anymore.  This will be especially valuable